--- a/index.html
+++ b/index.html
@@ -1,16 +1,45 @@
 <!DOCTYPE html>
 
 <html>
-    <head>
-        <meta charset="utf-8">
-        <title>OpenAPI Project</title>
-        <meta name="Author" content="Christian J">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="css/index.css">
-    </head>
-    <body>
-        <p>Hello</p>
 
-        <script src="js/index.js"></script>
-    </body>
+<head>
+    <meta charset="utf-8">
+    <title>OpenAPI Project</title>
+    <meta name="Author" content="Christian J">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="css/index.css">
+</head>
+
+<body>
+    <div class="mainContainer">
+        <div class="imageOfWeather">
+            <img src="images/weather-icon-cloudy.png" alt="image of current weather which is cloudy">
+        </div>
+        <div class="middleeTextInfo">
+            <div class="Title">
+                <h2> Japan</h2>
+            </div>
+            <div class="location">
+                <h3>Longitude</h3>
+                <h3>Latitude</h3>
+            
+                <div class="locationInfo">
+                    <p></p>
+                    <p class="other"></p>
+                </div>
+            </div>
+            <div class="Temp">
+                <h3>Temperature</h3>
+            </div>
+        </div>
+        <div class="bottomTextInfo">
+            <div class="additionalInfo">
+                <h2>Elevation</h2>
+                <h2>Fun Facts</h2>
+            </div>
+        </div>
+    </div>
+    <script src="js/index.js"></script>
+</body>
+
 </html>
